--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Page Title</title>
         <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="main.css" rel="stylesheet">
+	<link href="./main.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Spectral&display=swap" rel="stylesheet">
           
           <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
