--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 </svg>
                 </div>
                 <div id="coursee" class="sub">
-                    <a href="Cc.html">CSE & IT</a>
+                    <a href="cc.html">CSE & IT</a>
                     <a href="#">MECHANICAL</a>
                     <a href="#">CIVIL</a>
                     <a href="#EEE">EEE</a>
