--- a/abt.html
+++ b/abt.html
@@ -488,7 +488,7 @@ body
                 <div id="ham-X">
                     <div id="hamburger"></div>
                 </div>
-               <a href="#">Home</a>
+               <a href="./index.html">Home</a>
                 <a href="http://www.nsakcet.ac.in/Home">Official Site</a>
                 <a href="#contact">Contact</a>
             </nav></div>
