--- a/cc.html
+++ b/cc.html
@@ -264,7 +264,7 @@ Many cybersecurity jobs pay six-figure incomes, and roles can range from the et
     </form>
     </div>
     <div id="icons" class="my-4">
-   <a href="#"><i class="fab fa-facebook fa-lg" style="color:blue; cursor:pointer;"></i></a>
+   <a href="https://m.facebook.com/nsakcet.ac.in/"><i class="fab fa-facebook fa-lg" style="color:blue; cursor:pointer;"></i></a>
      <i class="fab fa-instagram-square fa-lg" style="color:violet"></i>
      <i class="fab fa-linkedin fa-lg" style="color:skyblue"></i>
      
