--- a/abt.html
+++ b/abt.html
@@ -643,7 +643,7 @@ body
     </form>
     </div>
     <div id="icons" class="my-4">
-   <a href="#EEE"><i class="fab fa-facebook fa-lg" style="color:blue; cursor:pointer;"></i></a>
+   <a href="https://m.facebook.com/nsakcet.ac.in/"><i class="fab fa-facebook fa-lg" style="color:blue; cursor:pointer;"></i></a>
      <i class="fab fa-instagram-square fa-lg" style="color:violet"></i>
      <i class="fab fa-linkedin fa-lg" style="color:skyblue"></i>
      
