--- a/mf.html
+++ b/mf.html
@@ -36,7 +36,7 @@
                 <div id="ham-X">
                     <div id="hamburger"></div>
                 </div>
-               <a href="#">Home</a>
+               <a href="./index.html">Home</a>
                 <a href="http://www.nsakcet.ac.in/Home">Official Site</a>
                 <a href="#contact">Contact</a>
             </nav></div>
@@ -401,7 +401,7 @@
     </form>
     </div>
     <div id="icons" class="my-4">
-   <a href="#EEE"><i class="fab fa-facebook fa-lg" style="color:blue; cursor:pointer;"></i></a>
+   <a href="https://m.facebook.com/nsakcet.ac.in/"><i class="fab fa-facebook fa-lg" style="color:blue; cursor:pointer;"></i></a>
      <i class="fab fa-instagram-square fa-lg" style="color:violet"></i>
      <i class="fab fa-linkedin fa-lg" style="color:skyblue"></i>
      
