--- a/not.html
+++ b/not.html
@@ -28,20 +28,21 @@ div
 }
 
 h1{
-    font-size:5em;
+    font-size:10em;
     color:#fffff0;
     font-family:cursive;
 }
 h2{
-    font-size:3em;
+    font-size:7em;
     font-family:monospace;
 }
 
-p{font-size:2rem;}
+p{font-size:5rem;}
 
 a{
     color:#fff;
     text-decoration:none;
+    font-size:5rem;
 }
         
         
