--- a/abt.html
+++ b/abt.html
@@ -682,7 +682,7 @@ $(function ()
      var height = $("#header").outerHeight()
   var fh = $(".body").offset().top + $(".body").outerHeight();
  $("#menu").offset({top:height});
- $(".body").offset({top:height});
+ $(".body").offset({top:height + 20});
  $(".footer").offset({top:fh + height});
  const endd = height + 50;
  
