--- a/cf.html
+++ b/cf.html
@@ -163,7 +163,7 @@
                 <div class="card-header">
                 
                     <img src="http://www.nsakcet.ac.in/Administrator/FacultyImages/image%20(27).jpg" class="card-img-top img-fluid" alt="...">
-                    <h4 class="card-title">Jannat Ma'am</h4><hr width="70%"> <p class="card-text"><strong>Profile: </strong>Assistant Professor</p> <p class="card-text"><strong>Qualification : </strong>M.tech</p> <p><strong>Skills : </strong> <span class="badge bg-danger">Python</span> <span class="badge bg-info">C lang.</span> <span class="badge bg-warning">Web Technologies</span> <span class="badge bg-success">Smooth teaching</span></p><p class="card-text"><strong>Email : </strong><small>fidurehan@gmail.com</small></p>
+                    <h4 class="card-title">Ms. Firdous Rehana</h4><hr width="70%"> <p class="card-text"><strong>Profile: </strong>Assistant Professor</p> <p class="card-text"><strong>Qualification : </strong>M.tech</p> <p><strong>Skills : </strong> <span class="badge bg-danger">Python</span> <span class="badge bg-info">C lang.</span> <span class="badge bg-warning">Web Technologies</span> <span class="badge bg-success">Smooth teaching</span></p><p class="card-text"><strong>Email : </strong><small>fidurehan@gmail.com</small></p>
                     
                     </div>
                     <div class="card-body">
