--- a/cc.html
+++ b/cc.html
@@ -36,7 +36,7 @@
                 <div id="ham-X">
                     <div id="hamburger"></div>
                 </div>
-               <a href="#">Home</a>
+               <a href="./index.html">Home</a>
                 <a href="http://www.nsakcet.ac.in/Home">Official Site</a>
                 <a href="#contact">Contact</a>
             </nav></div>
